--- a/Changelog.txt
+++ b/Changelog.txt
@@ -1,3 +1,9 @@
+**v0.3.3**
+
+- Fixed occasional nullref errors
+- Attempted to lower lag by reducing the number of calculations
+
+
 **v0.3.2**
 
 - Fixed ElvUI Compatibility
